--- a/gp-techlab-duckduckgobot/src/requirements.txt
+++ b/gp-techlab-duckduckgobot/src/requirements.txt
@@ -1,5 +1,5 @@
-firebase-admin==2.11.0
-beautifulsoup4==4.8.2
-requests==2.22.0
-html5lib==1.0.1
+firebase-admin
+beautifulsoup4
+requests
+html5lib
 tldextract
